--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
  */
 
 body {
-  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Advent Pro', sans-serif;
 }
 
 nav ul a,
@@ -15,8 +15,8 @@ nav .brand-logo {
   color: #000000;
 }
 
-nav .brand-logo {
-  font-family: 'Delius', cursive;
+.nav-wrapper {
+  font-family: 'Advent Pro', sans-serif;
 }
 
 .img-resized {
@@ -27,7 +27,7 @@ nav .brand-logo {
 }
 
 .sezioni {
-  font-size: 2px;
+  font-size: 15em;
 }
 
 .nav-wrapper {
@@ -135,7 +135,7 @@ p {
 
 footer.page-footer {
   margin: 0;
-  background-color: #9999c3
+  background-color: #ffab40
 }
 
 .social-icon {
