--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,13 @@ nav .brand-logo {
   height: 50px;
 }
 
+.parallax {
+  width: auto; 
+  height: auto;
+} 
+
 .sezioni {
-  font-size: 15em;
+  font-size: 50rem;
 }
 
 .nav-wrapper {
@@ -55,12 +60,17 @@ p {
 
 .header {
     margin-top: 15%;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .header-subtitle {
     font-size: 2rem;
+    font-family: 'Advent Pro', sans-serif;
 }
 
+.icon-name {
+    font-family: 'Permanent Marker', cursive;
+}
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
