--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,36 @@ p {
   font-family: 'Advent Pro', sans-serif;
 }
 
+.comune-icon {
+  font-size: 7em;
+}
+
+.section-pricing {
+    width: 100%;
+    height: 100%;
+}
+
+.pricing-icon {
+  font-size: 7em;
+  margin-top: 60px;
+}
+
+.pricing-header {
+    margin-top: 15%;
+    font-family: 'Permanent Marker', cursive;
+}
+
+.pricing-subtitle {
+  font-size: 2em;
+  margin-top: 10%;
+  font-family: 'Advent Pro', sans-serif;
+  line-height: 1.4em;
+}
+
+.btn-pricing {
+  width: 100%;
+}
+
 footer.page-footer {
   margin: 0;
   background-color: #ffab40
