--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,10 @@ footer.page-footer {
   background-color: #F5CB5C
 }
 
+.contattaci {
+  font-color: #333533;
+}
+
 .social-icon {
   font-size: 1.5em;
   margin-top: 60px;
